--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,8 @@ website:
         text: Home
       - href: resume.qmd
         text: Resume
+      - href: publications.qmd
+        text: Publications
 
 format:
   html:
